# COMP491

./: .gitignore  Final_Report.docx  README.md  pyproject.toml  requirements.txt
configs/: nsl_kdd_cnn_transformer.yaml  nsl_to_unsw_cnn_bilstm_baseline.yaml  nsl_to_unsw_cnn_transformer_weighted_ce.yaml  nsl_to_unsw_deep_autoencoder_baseline.yaml  unsw_nb15_cnn_bilstm_baseline.yaml  unsw_nb15_cnn_transformer.yaml  unsw_nb15_cnn_transformer_no_cnn_ablation.yaml  unsw_nb15_cnn_transformer_one_layer_ablation.yaml  unsw_nb15_cnn_transformer_unweighted.yaml  unsw_nb15_cnn_transformer_weighted_ce.yaml  unsw_nb15_cnn_transformer_weighted_ce_tuned.yaml  unsw_nb15_deep_autoencoder_baseline.yaml  unsw_nb15_mlp_baseline.yaml  unsw_nb15_mlp_unweighted.yaml  unsw_nb15_smoke.yaml  unsw_to_nsl_cnn_bilstm_baseline.yaml  unsw_to_nsl_cnn_transformer_weighted_ce.yaml  unsw_to_nsl_deep_autoencoder_baseline.yaml
scripts/: compare_runs.py  export_metrics_summary.py  export_per_class_comparison.py  preprocess_nsl_to_unsw_binary.py  preprocess_unsw.py  preprocess_unsw_to_nsl_binary.py  profile_models.py  summarize_unsw.py  train.py
src/ids_capstone/: __init__.py  config.py  data.py  losses.py  metrics.py  models.py  train.py
tests/: test_model.py
